# pygraham

./: .gitignore  LICENSE  README.md  RUNNER_SETUP.md  SONARCLOUD_QUICKSTART.md  SONARQUBE_SETUP.md  pyproject.toml  setup.py  sonar-project.properties
.github/workflows/: ci.yml  publish.yml  scheduled-ci.yml  sonarqube.yml
examples/: 01_maybe_basics.py  02_either_basics.py  03_immutable_list_basics.py  04_compose_pipe_curry_basics.py  05_pattern_matching_basics.py  banking_transactions.py  data_pipeline.py  file_system_tree.py  tsp_comparison.py
pygraham/: CMakeLists.txt  __init__.py  _fast.cpp  compose.py  either.py  fast.py  immutable.py  lazy.py  maybe.py  pattern.py
tests/: __init__.py  test_compose.py  test_either.py  test_immutable.py  test_lazy.py  test_maybe.py  test_pattern.py
