[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "pygraham"
version = "0.1.0"
description = "A high-performance functional programming library for Python"
readme = "README.md"
authors = [
    {name = "Riccardo Bernardi", email = "riccardo@bernardi.sh"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["functional", "programming", "fp", "immutable", "monads", "performance"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Bernardi-sh/pygraham"
Documentation = "https://github.com/Bernardi-sh/pygraham#readme"
Repository = "https://github.com/Bernardi-sh/pygraham"
Issues = "https://github.com/Bernardi-sh/pygraham/issues"

[tool.setuptools]
packages = ["pygraham"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"
